# capstone2_ROS_gazebo

./: README.md
src/capstone_scoring/: README.md
src/cnn_for_jetson/: CMakeLists.txt  Readme.md
src/cnn_for_jetson/src/: catdog_cnn_network.py  testimage_publisher.cpp
src/cnn_for_jetson/src/launch/: catdog.launch  cnn.launch
src/core_msgs/msg/: line_segments.msg
src/data_integrate/src/: data_integration.cpp
src/field_detection/: CMakeLists.txt  package.xml
src/field_detection/src/: ball_detect.cpp  ball_detect_top.cpp  dead_reckoning.cpp
src/find_frontier/: CMakeLists.txt
src/find_frontier/config/: costmap_common.yaml  planner.yaml
src/find_frontier/launch/: hector_mapping.launch  nav_run.launch
src/find_frontier/src/: find_frontier.cpp
src/hector_mapping/launch/: mapping_default.launch
src/junny_control/launch/: model20_control.launch
src/line_tracing/launch/: line_detect.launch
src/line_tracing/src/: line_detect.cpp  line_detect_actuation.cpp
src/map_generate/: README_map.md
src/map_generate/worlds/: map_final_ball.world
src/map_generate/worlds/materials/scripts/: test1.material  test10.material  test2.material  test3.material  test4.material  test5.material  test6.material  test7.material  (+2 more)
src/map_generate/worlds/meshes/: test.dae
src/model20/launch/: gazebo2.launch
src/model20/urdf/: model20.urdf.xacro
src/object_detection/: README.md
src/object_detection/src/: yolo_detection2.py
src/readmarker/launch/: readmark.launch
src/readmarker/src/: readmarker.cpp
src/turtlebot3_description/launch/: spawn_turtlebot3.launch
